--- a/index.ejs
+++ b/index.ejs
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="./src/css/antd.min.css">
+        <link rel="stylesheet" href="./src/build/index.bundle.css">
         <script src="https://cdn.bootcss.com/react/16.0.0-alpha/react.min.js"></script>
         <script src="https://cdn.bootcss.com/react-dom/16.0.0-alpha.6/react-dom.min.js"></script>
     </head>
     <body>
         <div id="app"></div>
-        <script src="/vendor.__bundle.js"></script>
-        <script src="/index.__bundle.js"></script>
+        <script src="./src/build/vendor.bundle.js"></script>
+        <script src="./src/build/index.bundle.js"></script>
     </body>
 </html>
