--- a/src/css/add.scss
+++ b/src/css/add.scss
@@ -45,7 +45,7 @@
         background-color: $main-color;
         border-color: $main-color;
     }
-    button:active, button:focus {
+    button:active, button:focus, button:hover {
         background-color: $main-color;
         border-color: $main-color;
     }
