--- a/index.ejs
+++ b/index.ejs
@@ -4,6 +4,8 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="./src/css/antd.min.css">
         <link rel="stylesheet" href="./src/build/index.bundle.css">
+        <link rel="stylesheet" href="./src/css/iconfont.css">
+        <script>var userInfo={userName:"<%= userName %>",token:"<%= token %>",hasLogin: <%= hasLogin %>}</script>
         <script src="https://cdn.bootcss.com/react/16.0.0-alpha/react.min.js"></script>
         <script src="https://cdn.bootcss.com/react-dom/16.0.0-alpha.6/react-dom.min.js"></script>
     </head>
